--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="piwrapper">
           
             <a href="#"  class="button">Home    </a>  
-            <a href="xheiztk.github.io./Testing.html"  class="button">Skills  </a>
+            <a href="xheiztk.github.io./testing.html"  class="button">Skills  </a>
             <a href="Project.html"  class="button">About Me </a>
             <a href="https://www.google.com"  class="button">Contact </a>
             </ul>
