--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           
             <a href="#"  class="button">Home    </a>  
             <a href="testing.html"  class="button">Skills  </a>
-            <a href="Project.html"  class="button">About Me </a>
+            <a href="project.html"  class="button">About Me </a>
             <a href="https://www.google.com"  class="button">Contact </a>
             </ul>
         </div>
