--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 
                 <div class="projectbutton">
-                    <a href="Project.html" >  Check</a>
+                    <a href="project.html" >  Check</a>
                 </div>
     
            </div>
