--- a/project.html
+++ b/project.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header class="head">
         <div class="piwrapper">
           
-            <a href="CV Index.html"  class="button">Home    </a>  
-            <a href="Testing.html"  class="button">Skills  </a>
+            <a href="index.html"  class="button">Home    </a>  
+            <a href="testing.html"  class="button">Skills  </a>
             <a href="#"  class="button">About Me </a>
             <a href="https://www.google.com"  class="button">Contact </a>
             </ul>
