--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style2.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header class="head">
         <div class="piwrapper">
           
             <a href="#"  class="button">Home    </a>  
-            <a href="Testing.html"  class="button">Skills  </a>
-            <a href="Project.html"  class="button">About Me </a>
+            <a href="testing.html"  class="button">Skills  </a>
+            <a href="project.html"  class="button">About Me </a>
             <a href="https://www.google.com"  class="button">Contact </a>
             </ul>
         </div>
@@ -66,7 +66,7 @@
             </div>
             
             <div class="projectbutton">
-                <a href="Project.html" >  Check</a>
+                <a href="project.html" >  Check</a>
             </div>
 
 
